Got training and testing data into np shapes

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -23,18 +23,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import requests\n",
+    "import pandas as pd\n",
     "\n",
-    "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.data'\n",
+    "#Read training data from adult.data and make Xtr and Ytr\n",
+    "data = np.array(pd.read_csv('adult.data'))\n",
+    "Xtr = data[:, :14]\n",
+    "Ytr = data[:, 14]\n",
     "\n",
-    "with requests.get(url) as link:\n",
-    "    adult = "
+    "#Read testing data from adult.test and make Xte and Yte\n",
+    "data = np.array(pd.read_csv('adult.test', skiprows = 1))\n",
+    "Xte = data[:, :14]\n",
+    "Yte = data[:, 14]\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -50,7 +59,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.8"
   },
   "orig_nbformat": 4
