Have decision tree model working

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,25 +31,61 @@
     "import matplotlib.pyplot as plt\n",
     "import requests\n",
     "import pandas as pd\n",
+    "from sklearn import preprocessing\n",
+    "import sklearn.tree as tree\n",
+    "from sklearn.metrics import zero_one_loss as J01\n",
+    "\n",
+    "le = preprocessing.LabelEncoder()\n",
     "\n",
     "#Read training data from adult.data and make Xtr and Ytr\n",
-    "data = np.array(pd.read_csv('adult.data'))\n",
-    "Xtr = data[:, :14]\n",
-    "Ytr = data[:, 14]\n",
+    "data = np.array(pd.read_csv('adult.data', header = None))\n",
+    "for i, j in enumerate([1, 3, 5, 6, 7, 8, 9, 13, 14]):\n",
+    "    le.fit(data[:, j])\n",
+    "    data[:, j] = le.transform(data[:, j])\n",
+    "Xtr = data[:, :14].astype('int')\n",
+    "Ytr = data[:, 14].astype('int')\n",
+    "\n",
     "\n",
     "#Read testing data from adult.test and make Xte and Yte\n",
-    "data = np.array(pd.read_csv('adult.test', skiprows = 1))\n",
-    "Xte = data[:, :14]\n",
-    "Yte = data[:, 14]\n",
-    "\n",
-    "\n",
+    "data = np.array(pd.read_csv('adult.test', header = None, skiprows = 1))\n",
+    "for i, j in enumerate([1, 3, 5, 6, 7, 8, 9, 13, 14]):\n",
+    "    le.fit(data[:, j])\n",
+    "    data[:, j] = le.transform(data[:, j])\n",
+    "Xte = data[:, :14].astype('int')\n",
+    "Yte = data[:, 14].astype('int')\n",
     "\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Try out Decision Tree with data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training error: 0.0\n",
+      "Validation error: 0.1862\n"
+     ]
+    }
+   ],
+   "source": [
+    "seed = 1234\n",
+    "\n",
+    "learner = tree.DecisionTreeClassifier(max_depth = 100, criterion ='entropy', random_state = seed)\n",
+    "learner.fit(Xtr, Ytr)\n",
+    "print(f'Training error: {np.round(J01(learner.predict(Xtr), Ytr), 4)}')\n",
+    "print(f'Validation error: {np.round(J01(learner.predict(Xte), Yte), 4)}')\n"
+   ]
   }
  ],
  "metadata": {
