--- a/Project.ipynb
+++ b/Project.ipynb
@@ -10,7 +10,7 @@
     "Members:<br>\n",
     "Dingyi Chang #89167697<br>\n",
     "Nicholas King #33099364<br>\n",
-    "Jenny My Lee #<br>"
+    "Jenny My Lee #11994579<br>"
    ]
   },
   {
